--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,18 +20,45 @@ a {
 }
 
 .hero {
-  // This is where the bulk of the SCSS styling needs to be done
+  @include set-background($primary-color);
+  @include set-bg($primary-color);
+  height: 600px;
 
-  // Take a look at the other files we've built already. How can they be useful here?
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    ul {
+      display: flex;
+      list-style-type: none;
+    }
+    li {
+      padding: 15px;
+    }
 
-  // Also, take time to review the features of SCSS we've already covered:
-  // 1. $variables
-  // 2. nesting (dont forget about the ampersand (&) parent selector!)
-  // 3. At-Rules
+    a {
+      color: set-text-color($primary-color);
+      color: text-color-picker($primary-color);
+    }
+
+    a:hover {
+        @@ -52,26 +51,28 @@
+    }
+  &-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    img {
+      width: 50%;
+    }
+    h1 {
+      font-size: 50px;
+      line-height: 1.2;
+    }
+  }
 }
-
-// This code is related to some of the aspects of SCSS we have yet to cover.
-// While you don't have to mess with it, it would be advisable to attempt to understand its functionality.
 $spaceamounts: (1,2,3,4,5);
 
 @each $space in $spaceamounts {
@@ -48,4 +75,5 @@ $spaceamounts: (1,2,3,4,5);
   .py-#{$space} {
     padding: #{$space}rem 0;
   }
+}
 }
